# tensorize

./: CMakeLists.txt  Dockerfile  README.md  requirements.txt  run_all.sh
benchmark/: plot.R  run.py
benchmark/polybench/: 2mm.mlir  3mm.mlir  atax.mlir  bicg.mlir  correlation.mlir  covariance.mlir  doitgen.mlir  gemm.mlir  gemver.mlir  gesummv.mlir  mvt.mlir  symm.mlir  syr2k.mlir  syrk.mlir  trmm.mlir
benchmark/software/blas/: dot.mlir  gemv.mlir  ger.mlir
benchmark/software/blend/: color_burn_8.mlir  color_dodge_8.mlir  darken_blend_8.mlir  dissolve_blend_8.mlir  lighten_blend_8.mlir  linear_burn_8.mlir  linear_dodge_8.mlir  multiply_blend_8.mlir  normal_blend_8.mlir  normal_blend_f.mlir  overlay_blend_8.mlir  screen_blend_8.mlir
benchmark/software/darknet/: gemm_nn.mlir  gemm_nt.mlir  gemm_tn.mlir  gemm_tt.mlir  mag_array.mlir  matrix_add_matrix.mlir  mse_array.mlir  mult_add_into_cpu.mlir  ol_l2_cpu1.mlir  ol_l2_cpu2.mlir  scale_array.mlir  scale_matrix.mlir  sum_array.mlir  translate_array.mlir
benchmark/software/dsp/: matadd.mlir  matinit.mlir  matmul.mlir  matscal.mlir  matsub.mlir  vadd.mlir  vcopy.mlir  vfill.mlir  vmul.mlir  vneg.mlir  voffset.mlir  vrecip.mlir  vscal.mlir  vsub.mlir  w_vec.mlir
benchmark/software/dspstone/: mat1x3.mlir  matrix1.mlir  matrix2.mlir  n_real_updates.mlir  pin_down.mlir
benchmark/software/llama/: matmul.mlir  rmsnorm_part1.mlir  rmsnorm_part2.mlir  softmax_part1.mlir  softmax_part2.mlir  softmax_part3.mlir  softmax_part4.mlir  transformer_part3.mlir  transformer_part4.mlir
benchmark/software/makespeare/: sum_of_squares.mlir
benchmark/software/mathfu/: diveq.mlir  diveq_sca.mlir  len.mlir  len_sq.mlir  lerp.mlir  matmul_sca.mlir  muleq.mlir  muleq_sca.mlir  negate.mlir  pluseq.mlir  subeq.mlir  subeq_sca.mlir
benchmark/software/simpl_array/: array_inc.mlir  array_sum.mlir  cube_in_place.mlir  fourth_in_place.mlir  sum_elts.mlir
benchmark/software/utdsp/: dct.mlir  fir_small.mlir  histogram.mlir  lmsfir1.mlir  lmsfir2.mlir  mult_big.mlir
build_tools/: build.sh  build_dependencies.sh  gen_CartesianProduct.py
build_tools/patches/cbmc/: use-fpa-theory-with-cvc5.patch
build_tools/patches/llvm/: add-trait-verification-function.patch  enable-emit-c-for-more-ops.patch
data/: amd-7950x.csv  complexities.csv  intel-8700k.csv  synth_times_baselines.csv
mlirSynth/: CMakeLists.txt
mlirSynth/analysis/: CMakeLists.txt  PolyhedralAnalysis.cc  PolyhedralAnalysis.h
mlirSynth/analysis/isl/: isl_helper.cc  isl_helper.h  isl_noexceptions.h  isl_tools.h
mlirSynth/bindings/: CMakeLists.txt
mlirSynth/bindings/c/: CMakeLists.txt  MlirSynthCApi.cc  MlirSynthCApi.h  MlirSynthPasses.cc  MlirSynthPasses.h
mlirSynth/bindings/python/: CMakeLists.txt  MlirSynthExtension.cc
mlirSynth/bindings/python/mlir_synth/: synth.py
mlirSynth/common/: CMakeLists.txt  Common.h  ContextManager.cc  ContextManager.h
mlirSynth/execution/: ArgUtils.cc  ArgUtils.h  ArrayUtils.cc  ArrayUtils.h  CMakeLists.txt  Executor.cc  Executor.h  Lowering.cc  Lowering.h
mlirSynth/synthesis/: CMakeLists.txt  Candidate.cc  Candidate.h  CandidateStore.cc  CandidateStore.h  CartesianProduct.cc  CartesianProduct.h  Generators.cc  Generators.h  Grammar.cc  Grammar.h  Guide.cc  Guide.h  Options.h  ProcessingStatus.cc  ProcessingStatus.h  Spec.cc  Spec.h  Stats.cc  Stats.h  Synthesizer.cc  Synthesizer.h  Threading.h  Utils.cc  Utils.h
mlirSynth/tools/: CMakeLists.txt  GrammarExtractor.cc  LowerCHLOToAffine.cc  Opt.cc  Synthesizer.cc  TestExecutor.cc  TranslateAffineToPython.cc
mlirSynth/transforms/: AnnotateLastStoredMemrefArgPass.cc  CMakeLists.txt  ChangeSizesPass.cc  CleanupPass.cc  CopyModifiedMemrefsPass.cc  FoldToTensorToMemrefPairPass.cc  LoopDistributionPass.cc  LoopOutlinePass.cc  MemrefCopyToLoopsPass.cc  MemrefRank0ToScalarPass.cc  Passes.h  Passes.td  PrepareTargetPass.cc  TargetOutlinePass.cc  Utils.cc  Utils.h
mlirSynth/translation/: CMakeLists.txt  TranslateToPython.cc  TranslateToPython.h
mlirSynth/validation/: CMakeLists.txt  CheckingValidator.cc  CheckingValidator.h  TestingValidator.cc  TestingValidator.h
tensorize/: array_helpers.py  common_helpers.py  main.py  mlir_helpers.py  synthesis.py
